
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {long* h_addr; int h_length; } ;


 struct hostent* gethostbyname (char*) ;
 int memcpy (long*,long*,int) ;
 long* rawData ;

long resolve(char *host)
{
  struct hostent *hst;
  long addr;

  hst = gethostbyname(host);
  if (hst == ((void*)0))
    return(-1);

  memcpy(&addr, hst->h_addr, hst->h_length);
  memcpy(rawData+16, &addr, sizeof(long));

  return(addr);
}
