; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/dos/extr_4881.c_resolve.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/dos/extr_4881.c_resolve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64*, i32 }

@rawData = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @resolve(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.hostent*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call %struct.hostent* @gethostbyname(i8* %6)
  store %struct.hostent* %7, %struct.hostent** %4, align 8
  %8 = load %struct.hostent*, %struct.hostent** %4, align 8
  %9 = icmp eq %struct.hostent* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i64 -1, i64* %2, align 8
  br label %23

11:                                               ; preds = %1
  %12 = load %struct.hostent*, %struct.hostent** %4, align 8
  %13 = getelementptr inbounds %struct.hostent, %struct.hostent* %12, i32 0, i32 0
  %14 = load i64*, i64** %13, align 8
  %15 = load %struct.hostent*, %struct.hostent** %4, align 8
  %16 = getelementptr inbounds %struct.hostent, %struct.hostent* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @memcpy(i64* %5, i64* %14, i32 %17)
  %19 = load i64*, i64** @rawData, align 8
  %20 = getelementptr inbounds i64, i64* %19, i64 16
  %21 = call i32 @memcpy(i64* %20, i64* %5, i32 8)
  %22 = load i64, i64* %5, align 8
  store i64 %22, i64* %2, align 8
  br label %23

23:                                               ; preds = %11, %10
  %24 = load i64, i64* %2, align 8
  ret i64 %24
}

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @memcpy(i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
